==> apache/mynewt-core/hw/drivers/i2s/i2s_stm32f7/src/i2s_stm32f7.c <==
#include <os/mynewt.h>
#include <mcu/mcu.h>
#include <mcu/stm32_hal.h>
#include <bsp/bsp.h>
#include <i2s/i2s.h>
#include <i2s/i2s_driver.h>
#include <i2s_stm32f7/i2s_stm32f7.h>

static int
stm32_i2s_init(struct i2s *i2s, const struct i2s_cfg *cfg)
{
    int rc = 0;
    struct stm32_i2s *stm32_i2s;

    i2s->direction = ((cfg->mode == I2S_MODE_MASTER_TX) ||
                      (cfg->mode == I2S_MODE_SLAVE_TX)) ? I2S_OUT : I2S_IN;

    if (cfg->data_format == I2S_DATAFORMAT_16B_EXTENDED ||
        cfg->data_format == I2S_DATAFORMAT_16B) {
        i2s->sample_size_in_bytes = 2;
    } else {
        i2s->sample_size_in_bytes = 4;
    }

    rc = i2s_init(i2s, cfg->pool);

    if (rc != OS_OK) {
        goto end;
    }

    stm32_i2s = cfg->spi_cfg->driver_data;
    stm32_i2s->i2s = i2s;
    stm32_i2s->hdma_spi = cfg->spi_cfg->hdma_spi;

    i2s->sample_rate = cfg->sample_rate;
    i2s->driver_data = stm32_i2s;

    i2s_init_pins((struct stm32_i2s_pins *)&cfg->pins);

    cfg->spi_cfg->enable_clock(true);

    stm32_i2s->hi2s.Instance = cfg->spi_cfg->spi;
    stm32_i2s->hi2s.Init.Mode = cfg->mode;
    stm32_i2s->hi2s.Init.Standard = cfg->standard;
    stm32_i2s->hi2s.Init.DataFormat = cfg->data_format;
    stm32_i2s->hi2s.Init.MCLKOutput = (cfg->pins.mck_pin) ? I2S_MCLKOUTPUT_ENABLE : I2S_MCLKOUTPUT_DISABLE;
    stm32_i2s->hi2s.Init.AudioFreq = cfg->sample_rate;
    stm32_i2s->hi2s.Init.CPOL = I2S_CPOL_LOW;
    stm32_i2s->hi2s.Init.ClockSource = I2S_CLOCK_PLL;

    if (cfg->dma_cfg->dma_num == 1) {
        __HAL_RCC_DMA1_CLK_ENABLE();
    } else {
#ifdef __HAL_RCC_DMA2_CLK_DISABLE
        __HAL_RCC_DMA2_CLK_ENABLE();
#endif
    }

    stm32_i2s->hdma_spi->Instance = cfg->dma_cfg->dma_stream;
    stm32_i2s->hdma_spi->Init.Channel = cfg->dma_cfg->dma_channel;
    if (cfg->mode == I2S_MODE_MASTER_TX || cfg->mode == I2S_MODE_SLAVE_TX) {
        stm32_i2s->hdma_spi->Init.Direction = DMA_MEMORY_TO_PERIPH;
    } else {
        stm32_i2s->hdma_spi->Init.Direction = DMA_PERIPH_TO_MEMORY;
    }
    stm32_i2s->hdma_spi->Init.PeriphInc = DMA_PINC_DISABLE;
    stm32_i2s->hdma_spi->Init.MemInc = DMA_MINC_ENABLE;
    stm32_i2s->hdma_spi->Init.PeriphDataAlignment = DMA_PDATAALIGN_HALFWORD;
    stm32_i2s->hdma_spi->Init.MemDataAlignment = DMA_MDATAALIGN_HALFWORD;
    stm32_i2s->hdma_spi->Init.Mode = DMA_NORMAL;
    stm32_i2s->hdma_spi->Init.Priority = DMA_PRIORITY_LOW;
    stm32_i2s->hdma_spi->Init.FIFOMode = DMA_FIFOMODE_DISABLE;

    if (cfg->mode == I2S_MODE_MASTER_TX || cfg->mode == I2S_MODE_SLAVE_TX) {
        __HAL_LINKDMA(&stm32_i2s->hi2s, hdmatx, *stm32_i2s->hdma_spi);
    } else {
        __HAL_LINKDMA(&stm32_i2s->hi2s, hdmarx, *stm32_i2s->hdma_spi);
    }

    i2s_init_interrupts(cfg);
end:
    return rc;
}

int
i2s_driver_stop(struct i2s *i2s)
{
    struct stm32_i2s *i2s_data = (struct stm32_i2s *)i2s->driver_data;
    struct i2s_sample_buffer *buffer;

    HAL_I2S_DMAStop(&i2s_data->hi2s);
    if (i2s->state == I2S_STATE_RUNNING && i2s->direction == I2S_OUT) {
        /*
         * When DMA is stopped and then I2S peripheral is stopped, it
         * may happen that DMA put some data already in SPI data buffer.
         * In that case single sample may be in the I2S output buffer.
         * If this happens next transmission will swap channels due to
         * one extra sample already present.
         * To avoid this just wait till all samples are gone.
         */
        if (0 == (i2s_data->hi2s.Instance->SR & SPI_SR_TXE_Msk)) {
            __HAL_I2S_ENABLE(&i2s_data->hi2s);
            while (0 == (i2s_data->hi2s.Instance->SR & SPI_SR_TXE_Msk))
                ;
            __HAL_I2S_DISABLE(&i2s_data->hi2s);
        }
    }

    assert(i2s_data->hi2s.State == HAL_I2S_STATE_READY);
    if (i2s_data->dma_buffer_count > 0) {
        buffer = i2s_data->dma_buffers[0];
        i2s_data->dma_buffers[0] = NULL;
        i2s_driver_buffer_put(i2s, buffer);
        if (i2s_data->dma_buffer_count > 1) {
            buffer = i2s_data->dma_buffers[1];
            i2s_driver_buffer_put(i2s, buffer);
        }
        i2s_data->dma_buffers[1] = NULL;
        i2s_data->dma_buffer_count = 0;
    }
    HAL_I2S_DeInit(&i2s_data->hi2s);
    HAL_DMA_DeInit(i2s_data->hdma_spi);
    return 0;
}

int
i2s_driver_start(struct i2s *i2s)
{
    int rc = 0;
    struct stm32_i2s *i2s_data = (struct stm32_i2s *)i2s->driver_data;

    switch (i2s_data->hi2s.State) {
    case HAL_I2S_STATE_RESET:
        if (i2s->sample_rate) {
            i2s_data->hi2s.Init.AudioFreq = i2s->sample_rate;
        }
        if (HAL_I2S_Init(&i2s_data->hi2s) != HAL_OK) {
            rc = SYS_EUNKNOWN;
            break;
        }
        if (HAL_DMA_Init(i2s_data->hdma_spi) != HAL_OK) {
            (void)HAL_I2S_DeInit(&i2s_data->hi2s);
            rc = SYS_EUNKNOWN;
            break;
        }
    /* Fallthrough */
    case HAL_I2S_STATE_READY:
        assert(i2s_data->dma_buffers[0] == NULL);
        assert(i2s_data->dma_buffers[1] == NULL);
        assert(i2s_data->dma_buffer_count == 0);
        i2s_data->dma_buffers[0] = i2s_driver_buffer_get(i2s);
        i2s_data->dma_buffers[1] = i2s_driver_buffer_get(i2s);
        if (i2s_data->dma_buffers[0] == NULL) {
            i2s->state = I2S_STATE_OUT_OF_BUFFERS;
            rc = I2S_ERR_NO_BUFFER;
            break;
        }
        if (i2s_data->dma_buffers[1] == NULL) {
            i2s_data->dma_buffers[1] = i2s_data->dma_buffers[0];
            i2s_data->dma_buffer_count = 1;
        } else {
            i2s_data->dma_buffer_count = 2;
        }
        i2s->state = I2S_STATE_RUNNING;
        if (i2s->direction == I2S_IN) {
            i2s_data->dma_buffers[0]->sample_count = i2s_data->dma_buffers[0]->capacity;
            assert(i2s_data->dma_buffers[0]->capacity == i2s_data->dma_buffers[1]->capacity);
            i2s_receive_start_dma(&i2s_data->hi2s, i2s_data->dma_buffers[0]->sample_data,
                                  i2s_data->dma_buffers[1]->sample_data, i2s_data->dma_buffers[0]->sample_count);
        } else if (i2s->direction == I2S_OUT) {
            i2s_transmit_start_dma(&i2s_data->hi2s,
                                   i2s_data->dma_buffers[0]->sample_data,
                                   i2s_data->dma_buffers[1]->sample_data,
                                   i2s_data->dma_buffers[0]->sample_count);
        }
        break;
    case HAL_I2S_STATE_BUSY:
    case HAL_I2S_STATE_BUSY_RX:
    case HAL_I2S_STATE_BUSY_TX:
        break;
    default:
        rc = I2S_ERR_INTERNAL;
    }
    return rc;
}

void
i2s_driver_buffer_queued(struct i2s *i2s)
{
    struct stm32_i2s *i2s_data = (struct stm32_i2s *)i2s->driver_data;
    struct i2s_sample_buffer *next_buffer;
    int sr;
    int inactive_memory_buffer_ix;
    uint32_t sample_buffer_addr;

    if (i2s->state != I2S_STATE_RUNNING) {
        return;
    }
    OS_ENTER_CRITICAL(sr);
    switch (i2s_data->dma_buffer_count) {
    case 0:
        i2s_data->dma_buffers[0] = i2s_driver_buffer_get(i2s);
        i2s_data->dma_buffer_count = 1;
        break;
    case 1:
        next_buffer = i2s_driver_buffer_get(i2s);
        if ((i2s_data->hdma_spi->Instance->CR & DMA_SxCR_EN) == 0) {
            i2s_data->dma_buffers[1] = next_buffer;
        } else {
            sample_buffer_addr = (uint32_t)next_buffer->sample_data;
            /* DMA is active with just one buffer, inactive buffer needs to be changed. */
            inactive_memory_buffer_ix = (i2s_data->hdma_spi->Instance->CR & DMA_SxCR_CT_Msk) ? 0 : 1;
            HAL_DMAEx_ChangeMemory(i2s_data->hdma_spi, sample_buffer_addr,
                                   inactive_memory_buffer_ix ? MEMORY1 : MEMORY0);
            if ((i2s_data->hdma_spi->Instance->CR & DMA_SxCR_EN_Msk) == 0) {
                /*
                 * There was race between checking current buffer and settings next.
                 * In this case M1AR or M0AR was write protected and write did not succeeded,
                 * Just write the other memory address.
                 */
                inactive_memory_buffer_ix ^= 1;
                HAL_DMAEx_ChangeMemory(i2s_data->hdma_spi, sample_buffer_addr,
                                       inactive_memory_buffer_ix ? MEMORY1 : MEMORY0);

                /* Writing to MxAR that was used stopped transfer with errors, make it continue */
                __HAL_DMA_CLEAR_FLAG(i2s_data->hdma_spi,
                                     (DMA_FLAG_FEIF0_4 | DMA_FLAG_DMEIF0_4 |
                                      DMA_FLAG_TEIF0_4 | DMA_FLAG_HTIF0_4 |
                                      DMA_FLAG_TCIF0_4) << i2s_data->hdma_spi->StreamIndex);
                i2s_data->hdma_spi->Instance->CR |= DMA_SxCR_EN;
            }
            i2s_data->dma_buffers[inactive_memory_buffer_ix] = next_buffer;
        }
        i2s_data->dma_buffer_count = 2;
        break;
    default:
        break;
    }
    OS_EXIT_CRITICAL(sr);
}
